--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "transformer": "token-transformer tokens.json tokens/input.json --expandShadow=true --expandTypography=true",
+    "dictionary": "style-dictionary build --config config.json"
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "style-dictionary": "^3.7.2",
+    "token-transformer": "^0.0.29"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
